# SPDX-License-Identifier: Unlicense
files = [
    'ecl-2.0.txt',
    'ncsa.txt',
]
foreach file: files
    fs.copyfile(file)
    if not meson.is_subproject() or get_option('install-subprojects').enabled()
        python.install_sources(
            file, 
            subdir: 'blastpipe'/'ozi_templates'/'license'/fs.name(meson.current_source_dir()))
    endif
endforeach
